--- a/METHODS/references.bib
+++ b/METHODS/references.bib
@@ -1,8 +1,3 @@
-@misc{cvd_who,
-  title = {{Cardiovascular Diseases Overview}},
-  author = {{WHO}},
-  url = {https://www.who.int/health-topics/cardiovascular-diseases/}
-}
 @misc{cvd_nhs,
   title = {{Cardiovascular Disease Overview}},
   author = {{NHS}},
@@ -19,4 +14,15 @@
   author = {{NHS}},
   year = {2024},
   url = {https://www.nhs.uk/conditions/coronary-heart-disease/}
+}
+@misc{cvd_who,
+  title = {{Cardiovascular Diseases Overview}},
+  author = {{WHO}},
+  url = {https://www.who.int/health-topics/cardiovascular-diseases/}
+}
+@misc{hd_cdc,
+  title = {{Heart Disease Facts}},
+  author = {{CDC}},
+  year = {2024},
+  url = {https://www.cdc.gov/heart-disease/data-research/facts-stats/index.html}
 }
