--- a/METHODS/references.bib
+++ b/METHODS/references.bib
@@ -18,11 +18,49 @@
 @misc{cvd_who,
   title = {{Cardiovascular Diseases Overview}},
   author = {{WHO}},
-  url = {https://www.who.int/health-topics/cardiovascular-diseases/}
+  url = {https://www.who.int/health-topics/cardiovascular-diseases}
 }
 @misc{hd_cdc,
   title = {{Heart Disease Facts}},
   author = {{CDC}},
   year = {2024},
   url = {https://www.cdc.gov/heart-disease/data-research/facts-stats/index.html}
+}
+@misc{pop_nrs,
+  title = {{Scotland’s population over 5.5 million people}},
+  author = {{National Records of Scotland}},
+  year = {2025},
+  url = {https://www.nrscotland.gov.uk/latest-news/scotland-s-population-over-55-million-people}
+}
+@misc{cvd_sheet_bhf,
+  title = {{Scotland Cardiovascular Disease Factsheet}},
+  author = {{British Heart Foundation}},
+  year = {2025},
+  url = {https://www.bhf.org.uk/-/media/files/for-professionals/research/heart-statistics/bhf-cvd-statistics-scotland-factsheet.pdf}
+}
+@article{econ_burden_paper,
+  title = {{Economic burden of cardiovascular disease in the United Kingdom}},
+  author = {{Kingsley Shih, Naomi Herz, Aziz Sheikh, Ciaran O'Neill, Paul Carter, Michael Anderson}},
+  year = {2025},
+  journal = {{European Heart Journal - Quality of Care and Clinical Outcomes}},
+  volume = {11},
+  number = {5},
+  pages = {678--690},
+  url = {https://academic.oup.com/ehjqcco/article/11/5/678/8038270}
+}
+@misc{profiles_tool_scotpho,
+  title = {{Welcome to the ScotPHO Profiles - Explore over 250 indicators of public health.}},
+  author = {{ScotPHO}},
+  url = {https://scotland.shinyapps.io/ScotPHO_profiles_tool/}
+}
+@misc{10_predictive_wm,
+  title = {{10 Types of Predictive Modeling}},
+  author = {{Raymond A. Mason School of Business, WILLIAM & MARY}},
+  year = {2025},
+  url = {https://online.mason.wm.edu/blog/predictive-modeling-types-with-benefits-uses}
+}
+@misc{rmse_wiki,
+  title = {{Root mean square deviation}},
+  year = {2025},
+  url = {https://en.wikipedia.org/wiki/Root_mean_square_deviation}
 }
